top bar clickable anywhere + fixed clipping issue

--- a/edit-me/pages/index/index.scss
+++ b/edit-me/pages/index/index.scss
@@ -151,7 +151,7 @@ overflow-x: hidden;
 .search-input {
   width: 100%;
   height: 100%;
-  min-height: 56px; /* base height */
+  min-height: 59px; /* base height */
   border: 1px solid #ccc;
   border-radius: 12px;
   outline: none;
